@@ -4,6 +4,7 @@
 
 === 1.0.20 ===
 * Added possibility to control the value set to RangeFloat and Float properties.
+* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
 * Updated build scripts.
 
 === 1.0.19 ===
